# haskell-relational-record-driver-postgresql8

./: LICENSE  README.md  relational-PostgreSQL83.cabal  relational-postgresql8.cabal
src/Database/HDBC/Schema/: PostgreSQL8.hs  PostgreSQL83.hs
src/Database/Relational/Schema/: PostgreSQL8.hs  PostgreSQL83.hs
src/Database/Relational/Schema/PgCatalog8/: Config.hs  PgAttribute.hs  PgClass.hs  PgConstraint.hs  PgNamespace.hs  PgType.hs
src/Database/Relational/Schema/PgCatalog83/: PgAttribute.hs  PgClass.hs  PgConstraint.hs  PgNamespace.hs  PgType.hs
